--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,10 +1,11 @@
 name: Android Build
 
-# Triggers the workflow on push events to the specified branches
+# Triggers the workflow on push and allows manual triggering
 on:
   push:
     branches:
-      - main # Specify the branch you want to monitor for pushes
+      - main # Trigger on push to main branch
+  workflow_dispatch: # Enables manual triggering
 
 jobs:
   build:
