--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,30 +1,25 @@
 name: Android Build
 
-# Triggers the workflow on push and allows manual triggering
 on:
   push:
     branches:
-      - main # Trigger on push to main branch
-  workflow_dispatch: # Enables manual triggering
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    # Set up the required environment (Java, Android SDK, etc.)
     steps:
-      # Check out the code from the repository
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Set up JDK
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: '11'
 
-      # Cache Gradle dependencies
       - name: Cache Gradle dependencies
         uses: actions/cache@v3
         with:
@@ -35,21 +30,14 @@ jobs:
           restore-keys: |
             gradle-${{ runner.os }}
 
-      # Set up the Android SDK
       - name: Set up Android SDK
-        uses: android-actions/setup-android@v2
-        with:
-          api-level: 31
-          build-tools-version: 31.0.0
-          target: android-31
+        uses: android-actions/setup-android@v2 # ✅ FIXED (Removed invalid inputs)
 
-      # Build the APK using Gradle (assembleDebug or assembleRelease)
       - name: Build APK (Debug)
         run: ./gradlew assembleDebug --stacktrace
 
-      # Upload the APK file as an artifact
       - name: Upload APK
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4 # ✅ FIXED (Updated to v4)
         with:
           name: app-debug-apk
           path: app/build/outputs/apk/debug/app-debug.apk
