--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -39,9 +39,9 @@ jobs:
 
       - name: Grant execute permission to Gradle wrapper # ✅ FIX: Add execute permissions
         run: chmod +x gradlew
-
+        
       - name: Build APK (Debug)
-        run: ./gradlew assembleDebug --stacktrace
+        run: ./gradlew assembleDebug --stacktrace --info
 
       - name: Upload APK
         uses: actions/upload-artifact@v4 # ✅ FIXED (Updated to v4)
